# predict-template

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  sample_reply.json  sample_request.json  test_api.sh
app/: config.py  main.py
app/models/: prediction_models.py
app/routers/: prediction_router.py
app/services/: auth_service.py  prediction_service.py
models/: .gitkeep
scripts/: .gitkeep  Meta_pairwise.py
